@@ -1,40 +1,41 @@
 package dev.ua.ikeepcalm.coi.client.screen;
 
 import dev.ua.ikeepcalm.coi.client.config.HudConfig;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.widget.ButtonWidget;
-import net.minecraft.client.gui.widget.CheckboxWidget;
-import net.minecraft.client.gui.widget.SliderWidget;
-import net.minecraft.client.gui.widget.TextFieldWidget;
-import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
+import net.minecraft.ChatFormatting;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphicsExtractor;
+import net.minecraft.client.gui.components.AbstractSliderButton;
+import net.minecraft.client.gui.components.Button;
+import net.minecraft.client.gui.components.Checkbox;
+import net.minecraft.client.gui.components.EditBox;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.network.chat.Component;
+import org.jspecify.annotations.NonNull;
 
 public class HudSettingsScreen extends Screen {
 
     private final Screen parent;
     private HudConfig.HudSettings settings;
 
-    private CheckboxWidget enabledCheckbox;
+    private Checkbox enabledCheckbox;
 
-    private CheckboxWidget showKeybindsCheckbox;
-    private CheckboxWidget showAbilityNamesCheckbox;
-    private CheckboxWidget showGlowEffectCheckbox;
+    private Checkbox showKeybindsCheckbox;
+    private Checkbox showAbilityNamesCheckbox;
+    private Checkbox showGlowEffectCheckbox;
 
-    private TextFieldWidget hudXField;
-    private TextFieldWidget hudYOffsetField;
-    private TextFieldWidget slotSizeField;
-    private TextFieldWidget slotSpacingField;
-    private TextFieldWidget hudScaleField;
+    private EditBox hudXField;
+    private EditBox hudYOffsetField;
+    private EditBox slotSizeField;
+    private EditBox slotSpacingField;
+    private EditBox hudScaleField;
 
-    private ButtonWidget resetButton;
-    private ButtonWidget presetButton;
+    private Button resetButton;
+    private Button presetButton;
     private int currentPreset = 0;
     private static final String[] PRESETS = {"Default", "Compact", "Large", "Minimal"};
 
     public HudSettingsScreen(Screen parent) {
-        super(Text.translatable("screen.coi.hud_settings"));
+        super(Component.translatable("screen.coi.hud_settings"));
         this.parent = parent;
         this.settings = new HudConfig.HudSettings();
         copySettings(HudConfig.getSettings(), this.settings);
@@ -62,241 +63,215 @@ public class HudSettingsScreen extends Screen {
         int spacing = Math.max(35, this.height / 15);
         int currentY = startY;
 
-        enabledCheckbox = CheckboxWidget.builder(Text.translatable("screen.coi.hud_enabled"), MinecraftClient.getInstance().textRenderer)
-                .pos(leftColumn, currentY)
-                .checked(settings.enabled)
+        enabledCheckbox = Checkbox.builder(Component.translatable("screen.coi.hud_enabled"), Minecraft.getInstance().font)
+                .pos(leftColumn, currentY).selected(settings.enabled)
                 .maxWidth(200)
                 .build();
-        this.addDrawableChild(enabledCheckbox);
+        this.addRenderableWidget(enabledCheckbox);
         currentY += spacing;
 
         int sliderWidth = Math.min(160, this.width / 4);
         int fieldWidth = Math.min(60, this.width / 12);
 
-        SliderWidget hudXSlider = new SliderWidget(leftColumn, currentY, sliderWidth, 20,
-                Text.literal("X: " + settings.hudX), settings.hudX / 500.0) {
+        AbstractSliderButton hudXSlider = new AbstractSliderButton(leftColumn, currentY, sliderWidth, 20, Component.literal("X: " + settings.hudX), settings.hudX / 500.0) {
             @Override
             protected void updateMessage() {
                 settings.hudX = (int) (this.value * 500);
-                this.setMessage(Text.literal("X: " + settings.hudX));
-                hudXField.setText(String.valueOf(settings.hudX));
+                this.setMessage(Component.literal("X: " + settings.hudX));
+                hudXField.setValue(String.valueOf(settings.hudX));
             }
 
             @Override
             protected void applyValue() {
                 settings.hudX = (int) (this.value * 500);
-                this.setMessage(Text.literal("X: " + settings.hudX));
-                hudXField.setText(String.valueOf(settings.hudX));
+                this.setMessage(Component.literal("X: " + settings.hudX));
+                hudXField.setValue(String.valueOf(settings.hudX));
             }
         };
-        this.addDrawableChild(hudXSlider);
+        this.addRenderableWidget(hudXSlider);
 
-        hudXField = new TextFieldWidget(this.textRenderer, rightColumn, currentY, fieldWidth, 20,
-                Text.translatable("screen.coi.hud_x_field"));
-        hudXField.setText(String.valueOf(settings.hudX));
-        hudXField.setChangedListener(text -> {
+        hudXField = new EditBox(this.font, rightColumn, currentY, fieldWidth, 20, Component.translatable("screen.coi.hud_x_field"));
+        hudXField.setValue(String.valueOf(settings.hudX));
+        hudXField.setResponder(text -> {
             try {
                 int value = Integer.parseInt(text);
-                settings.hudX = Math.max(0, Math.min(500, value));
+                settings.hudX = Math.clamp(value, 0, 500);
                 // hudXSlider.setValue(settings.hudX / 500.0);
             } catch (NumberFormatException ignored) {
             }
         });
-        this.addDrawableChild(hudXField);
+        this.addRenderableWidget(hudXField);
         currentY += spacing;
 
-        SliderWidget hudYOffsetSlider = new SliderWidget(leftColumn, currentY, sliderWidth, 20,
-                Text.literal("Y Offset: " + settings.hudYOffset), settings.hudYOffset / 200.0) {
+        AbstractSliderButton hudYOffsetSlider = new AbstractSliderButton(leftColumn, currentY, sliderWidth, 20, Component.literal("Y Offset: " + settings.hudYOffset), settings.hudYOffset / 200.0) {
             @Override
             protected void updateMessage() {
                 settings.hudYOffset = (int) (this.value * 200);
-                this.setMessage(Text.literal("Y Offset: " + settings.hudYOffset));
-                hudYOffsetField.setText(String.valueOf(settings.hudYOffset));
+                this.setMessage(Component.literal("Y Offset: " + settings.hudYOffset));
+                hudYOffsetField.setValue(String.valueOf(settings.hudYOffset));
             }
 
             @Override
             protected void applyValue() {
                 settings.hudYOffset = (int) (this.value * 200);
-                this.setMessage(Text.literal("Y Offset: " + settings.hudYOffset));
-                hudYOffsetField.setText(String.valueOf(settings.hudYOffset));
+                this.setMessage(Component.literal("Y Offset: " + settings.hudYOffset));
+                hudYOffsetField.setValue(String.valueOf(settings.hudYOffset));
             }
         };
-        this.addDrawableChild(hudYOffsetSlider);
+        this.addRenderableWidget(hudYOffsetSlider);
 
-        hudYOffsetField = new TextFieldWidget(this.textRenderer, rightColumn, currentY, fieldWidth, 20,
-                Text.translatable("screen.coi.hud_y_offset_field"));
-        hudYOffsetField.setText(String.valueOf(settings.hudYOffset));
-        hudYOffsetField.setChangedListener(text -> {
+        hudYOffsetField = new EditBox(this.font, rightColumn, currentY, fieldWidth, 20, Component.translatable("screen.coi.hud_y_offset_field"));
+        hudYOffsetField.setValue(String.valueOf(settings.hudYOffset));
+        hudYOffsetField.setResponder(text -> {
             try {
                 int value = Integer.parseInt(text);
-                settings.hudYOffset = Math.max(0, Math.min(200, value));
+                settings.hudYOffset = Math.clamp(value, 0, 200);
                 // hudYOffsetSlider.setValue(settings.hudYOffset / 200.0);
             } catch (NumberFormatException ignored) {
             }
         });
-        this.addDrawableChild(hudYOffsetField);
+        this.addRenderableWidget(hudYOffsetField);
         currentY += spacing;
 
-        SliderWidget slotSizeSlider = new SliderWidget(leftColumn, currentY, sliderWidth, 20,
-                Text.literal("Slot Size: " + settings.slotSize), (settings.slotSize - 20) / 80.0) {
+        AbstractSliderButton slotSizeSlider = new AbstractSliderButton(leftColumn, currentY, sliderWidth, 20, Component.literal("Slot Size: " + settings.slotSize), (settings.slotSize - 20) / 80.0) {
             @Override
             protected void updateMessage() {
                 settings.slotSize = 20 + (int) (this.value * 80);
-                this.setMessage(Text.literal("Slot Size: " + settings.slotSize));
-                slotSizeField.setText(String.valueOf(settings.slotSize));
+                this.setMessage(Component.literal("Slot Size: " + settings.slotSize));
+                slotSizeField.setValue(String.valueOf(settings.slotSize));
             }
 
             @Override
             protected void applyValue() {
                 settings.slotSize = 20 + (int) (this.value * 80);
-                this.setMessage(Text.literal("Slot Size: " + settings.slotSize));
-                slotSizeField.setText(String.valueOf(settings.slotSize));
+                this.setMessage(Component.literal("Slot Size: " + settings.slotSize));
+                slotSizeField.setValue(String.valueOf(settings.slotSize));
             }
         };
-        this.addDrawableChild(slotSizeSlider);
+        this.addRenderableWidget(slotSizeSlider);
 
-        slotSizeField = new TextFieldWidget(this.textRenderer, rightColumn, currentY, fieldWidth, 20,
-                Text.translatable("screen.coi.slot_size_field"));
-        slotSizeField.setText(String.valueOf(settings.slotSize));
-        slotSizeField.setChangedListener(text -> {
+        slotSizeField = new EditBox(this.font, rightColumn, currentY, fieldWidth, 20, Component.translatable("screen.coi.slot_size_field"));
+        slotSizeField.setValue(String.valueOf(settings.slotSize));
+        slotSizeField.setResponder(text -> {
             try {
                 int value = Integer.parseInt(text);
-                settings.slotSize = Math.max(20, Math.min(100, value));
+                settings.slotSize = Math.clamp(value, 20, 100);
                 // slotSizeSlider.setValue((settings.slotSize - 20) / 80.0);
             } catch (NumberFormatException ignored) {
             }
         });
-        this.addDrawableChild(slotSizeField);
+        this.addRenderableWidget(slotSizeField);
         currentY += spacing;
 
-        SliderWidget slotSpacingSlider = new SliderWidget(leftColumn, currentY, sliderWidth, 20,
-                Text.literal("Spacing: " + settings.slotSpacing), (settings.slotSpacing - 30) / 70.0) {
+        AbstractSliderButton slotSpacingSlider = new AbstractSliderButton(leftColumn, currentY, sliderWidth, 20, Component.literal("Spacing: " + settings.slotSpacing), (settings.slotSpacing - 30) / 70.0) {
             @Override
             protected void updateMessage() {
                 settings.slotSpacing = 30 + (int) (this.value * 70);
-                this.setMessage(Text.literal("Spacing: " + settings.slotSpacing));
-                slotSpacingField.setText(String.valueOf(settings.slotSpacing));
+                this.setMessage(Component.literal("Spacing: " + settings.slotSpacing));
+                slotSpacingField.setValue(String.valueOf(settings.slotSpacing));
             }
 
             @Override
             protected void applyValue() {
                 settings.slotSpacing = 30 + (int) (this.value * 70);
-                this.setMessage(Text.literal("Spacing: " + settings.slotSpacing));
-                slotSpacingField.setText(String.valueOf(settings.slotSpacing));
+                this.setMessage(Component.literal("Spacing: " + settings.slotSpacing));
+                slotSpacingField.setValue(String.valueOf(settings.slotSpacing));
             }
         };
-        this.addDrawableChild(slotSpacingSlider);
+        this.addRenderableWidget(slotSpacingSlider);
 
-        slotSpacingField = new TextFieldWidget(this.textRenderer, rightColumn, currentY, fieldWidth, 20,
-                Text.translatable("screen.coi.slot_spacing_field"));
-        slotSpacingField.setText(String.valueOf(settings.slotSpacing));
-        slotSpacingField.setChangedListener(text -> {
+        slotSpacingField = new EditBox(this.font, rightColumn, currentY, fieldWidth, 20, Component.translatable("screen.coi.slot_spacing_field"));
+        slotSpacingField.setValue(String.valueOf(settings.slotSpacing));
+        slotSpacingField.setResponder(text -> {
             try {
                 int value = Integer.parseInt(text);
-                settings.slotSpacing = Math.max(30, Math.min(100, value));
+                settings.slotSpacing = Math.clamp(value, 30, 100);
                 // slotSpacingSlider.setValue((settings.slotSpacing - 30) / 70.0);
             } catch (NumberFormatException ignored) {
             }
         });
-        this.addDrawableChild(slotSpacingField);
+        this.addRenderableWidget(slotSpacingField);
         currentY += spacing;
 
-        SliderWidget hudScaleSlider = new SliderWidget(leftColumn, currentY, sliderWidth, 20,
-                Text.literal("Scale: " + String.format("%.1f", settings.hudScale)), (settings.hudScale - 0.5) / 1.5) {
+        AbstractSliderButton hudScaleSlider = new AbstractSliderButton(leftColumn, currentY, sliderWidth, 20, Component.literal("Scale: " + String.format("%.1f", settings.hudScale)), (settings.hudScale - 0.5) / 1.5) {
             @Override
             protected void updateMessage() {
                 settings.hudScale = 0.5f + (float) (this.value * 1.5);
-                this.setMessage(Text.literal("Scale: " + String.format("%.1f", settings.hudScale)));
-                hudScaleField.setText(String.format("%.1f", settings.hudScale));
+                this.setMessage(Component.literal("Scale: " + String.format("%.1f", settings.hudScale)));
+                hudScaleField.setValue(String.format("%.1f", settings.hudScale));
             }
 
             @Override
             protected void applyValue() {
                 settings.hudScale = 0.5f + (float) (this.value * 1.5);
-                this.setMessage(Text.literal("Scale: " + String.format("%.1f", settings.hudScale)));
-                hudScaleField.setText(String.format("%.1f", settings.hudScale));
+                this.setMessage(Component.literal("Scale: " + String.format("%.1f", settings.hudScale)));
+                hudScaleField.setValue(String.format("%.1f", settings.hudScale));
             }
         };
-        this.addDrawableChild(hudScaleSlider);
+        this.addRenderableWidget(hudScaleSlider);
 
-        hudScaleField = new TextFieldWidget(this.textRenderer, rightColumn, currentY, fieldWidth, 20,
-                Text.translatable("screen.coi.hud_scale_field"));
-        hudScaleField.setText(String.format("%.1f", settings.hudScale));
-        hudScaleField.setChangedListener(text -> {
+        hudScaleField = new EditBox(this.font, rightColumn, currentY, fieldWidth, 20, Component.translatable("screen.coi.hud_scale_field"));
+        hudScaleField.setValue(String.format("%.1f", settings.hudScale));
+        hudScaleField.setResponder(text -> {
             try {
                 float value = Float.parseFloat(text);
-                settings.hudScale = Math.max(0.5f, Math.min(2.0f, value));
+                settings.hudScale = Math.clamp(value, 0.5f, 2.0f);
                 // hudScaleSlider.setValue((settings.hudScale - 0.5) / 1.5);
             } catch (NumberFormatException ignored) {
             }
         });
-        this.addDrawableChild(hudScaleField);
+        this.addRenderableWidget(hudScaleField);
         currentY += spacing;
 
-        showKeybindsCheckbox = CheckboxWidget.builder(Text.translatable("screen.coi.show_keybinds"), MinecraftClient.getInstance().textRenderer)
+        showKeybindsCheckbox = Checkbox.builder(Component.translatable("screen.coi.show_keybinds"), Minecraft.getInstance().font)
                 .pos(leftColumn, currentY)
-                .maxWidth(200)
-                .callback((checkbox, checked) -> settings.showKeybinds = checked)
-                .checked(settings.showKeybinds)
+                .maxWidth(200).onValueChange((checkbox, checked) -> settings.showKeybinds = checked).selected(settings.showKeybinds)
                 .build();
 
-        this.addDrawableChild(showKeybindsCheckbox);
+        this.addRenderableWidget(showKeybindsCheckbox);
         currentY += 25;
 
-        showAbilityNamesCheckbox = CheckboxWidget.builder(Text.translatable("screen.coi.show_ability_names"), MinecraftClient.getInstance().textRenderer)
+        showAbilityNamesCheckbox = Checkbox.builder(Component.translatable("screen.coi.show_ability_names"), Minecraft.getInstance().font)
                 .pos(leftColumn, currentY)
-                .maxWidth(200)
-                .callback((checkbox, checked) -> settings.showAbilityNames = checked)
-                .checked(settings.showAbilityNames)
+                .maxWidth(200).onValueChange((checkbox, checked) -> settings.showAbilityNames = checked).selected(settings.showAbilityNames)
                 .build();
 
-        this.addDrawableChild(showAbilityNamesCheckbox);
+        this.addRenderableWidget(showAbilityNamesCheckbox);
         currentY += 25;
 
-        showGlowEffectCheckbox = CheckboxWidget.builder(Text.translatable("screen.coi.show_glow_effect"), MinecraftClient.getInstance().textRenderer)
+        showGlowEffectCheckbox = Checkbox.builder(Component.translatable("screen.coi.show_glow_effect"), Minecraft.getInstance().font)
                 .pos(leftColumn, currentY)
-                .maxWidth(200)
-                .callback((checkbox, checked) -> settings.showGlowEffect = checked)
-                .checked(settings.showGlowEffect)
+                .maxWidth(200).onValueChange((checkbox, checked) -> settings.showGlowEffect = checked).selected(settings.showGlowEffect)
                 .build();
 
-        this.addDrawableChild(showGlowEffectCheckbox);
+        this.addRenderableWidget(showGlowEffectCheckbox);
 
         int buttonY = this.height - Math.max(40, this.height / 10);
         int buttonWidth = Math.min(100, this.width / 8);
         int smallButtonWidth = Math.min(90, this.width / 9);
 
-        presetButton = ButtonWidget.builder(
-                Text.translatable("screen.coi.preset").append(": " + PRESETS[currentPreset]),
+        presetButton = Button.builder(Component.translatable("screen.coi.preset").append(": " + PRESETS[currentPreset]),
                 button -> {
                     currentPreset = (currentPreset + 1) % PRESETS.length;
-                    button.setMessage(Text.translatable("screen.coi.preset").append(": " + PRESETS[currentPreset]));
+                    button.setMessage(Component.translatable("screen.coi.preset").append(": " + PRESETS[currentPreset]));
                     applyPreset(currentPreset);
-                }
-        ).dimensions(centerX - Math.min(205, this.width / 3), buttonY, buttonWidth, 20).build();
-        this.addDrawableChild(presetButton);
+                }).bounds(centerX - Math.min(205, this.width / 3), buttonY, buttonWidth, 20).build();
+        this.addRenderableWidget(presetButton);
 
-        resetButton = ButtonWidget.builder(
-                Text.translatable("screen.coi.reset_defaults"),
+        resetButton = Button.builder(Component.translatable("screen.coi.reset_defaults"),
                 button -> {
                     resetToDefaults();
                     this.init();
-                }
-        ).dimensions(centerX - buttonWidth, buttonY, smallButtonWidth, 20).build();
-        this.addDrawableChild(resetButton);
+                }).bounds(centerX - buttonWidth, buttonY, smallButtonWidth, 20).build();
+        this.addRenderableWidget(resetButton);
 
-        this.addDrawableChild(ButtonWidget.builder(
-                Text.translatable("gui.cancel"),
-                button -> this.close()
-        ).dimensions(centerX - 5, buttonY, smallButtonWidth, 20).build());
+        this.addRenderableWidget(Button.builder(Component.translatable("gui.cancel"), button -> this.onClose()).bounds(centerX - 5, buttonY, smallButtonWidth, 20).build());
 
-        this.addDrawableChild(ButtonWidget.builder(
-                Text.translatable("gui.done"),
+        this.addRenderableWidget(Button.builder(Component.translatable("gui.done"),
                 button -> {
                     saveSettings();
-                    this.close();
-                }
-        ).dimensions(centerX + Math.min(100, this.width / 10), buttonY, smallButtonWidth, 20).build());
+                    this.onClose();
+                }).bounds(centerX + Math.min(100, this.width / 10), buttonY, smallButtonWidth, 20).build());
     }
 
     private void applyPreset(int preset) {
@@ -352,29 +327,29 @@ public class HudSettingsScreen extends Screen {
     }
 
     private void refreshWidgets() {
-        hudXField.setText(String.valueOf(settings.hudX));
-        hudYOffsetField.setText(String.valueOf(settings.hudYOffset));
-        slotSizeField.setText(String.valueOf(settings.slotSize));
-        slotSpacingField.setText(String.valueOf(settings.slotSpacing));
-        hudScaleField.setText(String.format("%.1f", settings.hudScale));
+        hudXField.setValue(String.valueOf(settings.hudX));
+        hudYOffsetField.setValue(String.valueOf(settings.hudYOffset));
+        slotSizeField.setValue(String.valueOf(settings.slotSize));
+        slotSpacingField.setValue(String.valueOf(settings.slotSpacing));
+        hudScaleField.setValue(String.format("%.1f", settings.hudScale));
 
-        presetButton.setMessage(Text.translatable("screen.coi.preset").append(": " + PRESETS[currentPreset]));
+        presetButton.setMessage(Component.translatable("screen.coi.preset").append(": " + PRESETS[currentPreset]));
     }
 
     private void saveSettings() {
-        settings.enabled = enabledCheckbox.isChecked();
-        settings.showKeybinds = showKeybindsCheckbox.isChecked();
-        settings.showAbilityNames = showAbilityNamesCheckbox.isChecked();
-        settings.showGlowEffect = showGlowEffectCheckbox.isChecked();
+        settings.enabled = enabledCheckbox.selected();
+        settings.showKeybinds = showKeybindsCheckbox.selected();
+        settings.showAbilityNames = showAbilityNamesCheckbox.selected();
+        settings.showGlowEffect = showGlowEffectCheckbox.selected();
 
         HudConfig.setSettings(settings);
     }
 
     @Override
-    public void render(DrawContext context, int mouseX, int mouseY, float delta) {
-        super.render(context, mouseX, mouseY, delta);
+    public void extractRenderState(@NonNull GuiGraphicsExtractor graphics, int mouseX, int mouseY, float a) {
+        super.extractRenderState(graphics, mouseX, mouseY, a);
 
-        context.drawCenteredTextWithShadow(this.textRenderer, this.title, this.width / 2, 20, 0xFFFFFF);
+        graphics.centeredText(this.font, this.title, this.width / 2, 20, 0xFFFFFF);
 
         int columnSpacing = Math.min(160, this.width / 3);
         int leftColumn = this.width / 2 - columnSpacing;
@@ -382,48 +357,41 @@ public class HudSettingsScreen extends Screen {
         int spacing = Math.max(35, this.height / 15);
         int labelY = startY + 5;
 
-        context.drawTextWithShadow(this.textRenderer, Text.translatable("screen.coi.hud_x"),
+        graphics.text(this.font, Component.translatable("screen.coi.hud_x"), leftColumn, labelY - 15, 0xA0A0A0);
+        labelY += spacing;
+
+        graphics.text(this.font, Component.translatable("screen.coi.hud_y_offset"), leftColumn, labelY - 15, 0xA0A0A0);
+        labelY += spacing;
+
+        graphics.text(this.font, Component.translatable("screen.coi.slot_size"),
                 leftColumn, labelY - 15, 0xA0A0A0);
         labelY += spacing;
 
-        context.drawTextWithShadow(this.textRenderer, Text.translatable("screen.coi.hud_y_offset"),
+        graphics.text(this.font, Component.translatable("screen.coi.slot_spacing"),
                 leftColumn, labelY - 15, 0xA0A0A0);
         labelY += spacing;
 
-        context.drawTextWithShadow(this.textRenderer, Text.translatable("screen.coi.slot_size"),
-                leftColumn, labelY - 15, 0xA0A0A0);
-        labelY += spacing;
-
-        context.drawTextWithShadow(this.textRenderer, Text.translatable("screen.coi.slot_spacing"),
-                leftColumn, labelY - 15, 0xA0A0A0);
-        labelY += spacing;
-
-        context.drawTextWithShadow(this.textRenderer, Text.translatable("screen.coi.hud_scale"),
+        graphics.text(this.font, Component.translatable("screen.coi.hud_scale"),
                 leftColumn, labelY - 15, 0xA0A0A0);
 
         if (!settings.enabled) {
-            context.drawCenteredTextWithShadow(this.textRenderer,
-                    Text.translatable("screen.coi.hud_disabled_warning").formatted(Formatting.RED),
+            graphics.centeredText(this.font, Component.translatable("screen.coi.hud_disabled_warning").withStyle(ChatFormatting.RED),
                     this.width / 2, this.height - 80, 0xFF5555);
         }
 
-        renderTooltips(context, mouseX, mouseY);
+        renderTooltips(graphics, mouseX, mouseY);
     }
 
-    private void renderTooltips(DrawContext context, int mouseX, int mouseY) {
+    private void renderTooltips(GuiGraphicsExtractor context, int mouseX, int mouseY) {
         if (resetButton.isHovered()) {
-            context.drawTooltip(this.textRenderer,
-                    Text.translatable("screen.coi.reset_defaults.tooltip"), mouseX, mouseY);
+            context.setTooltipForNextFrame(this.font, Component.translatable("screen.coi.reset_defaults.tooltip"), mouseX, mouseY);
         } else if (presetButton.isHovered()) {
-            context.drawTooltip(this.textRenderer,
-                    Text.translatable("screen.coi.preset.tooltip"), mouseX, mouseY);
+            context.setTooltipForNextFrame(this.font, Component.translatable("screen.coi.preset.tooltip"), mouseX, mouseY);
         }
     }
 
     @Override
-    public void close() {
-        if (this.client != null) {
-            this.client.setScreen(this.parent);
-        }
+    public void onClose() {
+        this.minecraft.setScreen(this.parent);
     }
 }
